syntax = "proto3";

package item;

import "google/protobuf/timestamp.proto";

message QueryItemReq {
    string id = 1;
}

message QueryItemRes {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    google.protobuf.Timestamp created_at = 5;
}

message CreateItemReq {
    string name = 1;
    string description = 2;
    double price = 3;
}

service ItemResolver {
    rpc Item (QueryItemReq) returns (QueryItemRes);
    rpc CreateItem (CreateItemReq) returns (QueryItemRes);
}